[package]
name = "str-macro"
description = "The str!() macro, similar to vec![] but for strings"
repository = "https://github.com/ammongit/str-macro"
readme = "README.md"
license = "MIT"
keywords = ["str", "string", "slice", "owned", "macro"]
categories = []

version = "0.1.2"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018"

[dependencies]
